--- a/site/index.html
+++ b/site/index.html
@@ -112,6 +112,12 @@
           </li>
           <li>
             <a href="https://t.me/joinchat/ALnoP0UAAauNVlk06fKilg">Programmazione I</a><br>
+            <small class="linkAvailable"><a href="http://boldi.di.unimi.it/Corsi/Inf2020/"><i class="far fa-file-alt"></i> Avvisi</a></small> 
+            -
+            <small class="linkAvailable"><a href="https://atrentinip.ariel.ctu.unimi.it/v5/home/Default.aspx"><i class="fas fa-home"></i> Ariel Ed.1</a></small> 
+            - 
+            <small class="linkAvailable"><a href="https://mcasazzapud.ariel.ctu.unimi.it/v5/home/Default.aspx"><i class="fas fa-home"></i> Ariel Ed.2</a></small> 
+            - 
             <small class="linkAvailable"><a href="faq_files/programmazione_1/programmazione_1.pdf"><i class="fas fa-question-circle"></i> faq</a></small>
           </li>
           <li>
@@ -216,12 +222,12 @@
             <a href="https://t.me/joinchat/ALnoPxWU39MVqWyUb2pTTA">Reti di calcolatori</a><br>
             <small class="linkAvailable"><a href="https://grossircc.ariel.ctu.unimi.it/v5/Home/"><i class="fas fa-home"></i> Sito Teoria</a></small> 
             - 
-            <small class="linkAvailable"><a href="https://grossircc.ariel.ctu.unimi.it/v5/Home/"><i class="fas fa-home"></i> Sito Lab</a></small> 
+            <small class="linkAvailable"><a href="https://epaganircl.ariel.ctu.unimi.it/v5/frm3/ThreadList.aspx?name=contenuti"><i class="fas fa-home"></i> Sito Lab</a></small> 
             - 
             <small class="linkAvailable"><a href="faq_files/reti_di_calcolatori/reti_di_calcolatori.pdf"><i class="fas fa-question-circle"></i> faq</a></small>
           </li>
           <li>
-            <a>Aspetti etici, legali, sociali ed economici dell’informatica</a><br>
+            <a href="https://t.me/joinchat/I5_YNhggtTZgyiqxRL6Y1Q">Aspetti etici, legali, sociali ed economici dell’informatica</a><br>
             <small class="linkAvailable"><a href="https://labonline.ctu.unimi.it/course/view.php?id=142"><i class="fas fa-home"></i> Sito Web</a></small> 
             -
             <small class="linkNotAvailable"><a><i class="fas fa-question-circle"></i> faq</a></small>
@@ -318,12 +324,6 @@
           <li>
             <a href="https://t.me/joinchat/ALnoPx2rf4uBLOWB5bYXVg">Fondamenti di social media digitali</a><br>
             <small class="linkAvailable"><a href="https://alanzifsmd.ariel.ctu.unimi.it/v5/home/Default.aspx"><i class="fas fa-home"></i> Sito Web</a></small> 
-            - 
-            <small class="linkNotAvailable"><a><i class="fas fa-question-circle"></i> faq</a></small>
-          </li>
-          <li>
-            <a href="https://t.me/joinchat/ALnoPxQcx3n95fW4bhoreQ">Gestione dei processi aziendali</a><br>
-            <small class="linkNotAvailable"><a><i class="fas fa-home"></i> Sito Web</a></small> 
             - 
             <small class="linkNotAvailable"><a><i class="fas fa-question-circle"></i> faq</a></small>
           </li>
