--- a/site/index.html
+++ b/site/index.html
@@ -52,7 +52,7 @@
     </header>
 
     
-    <section id="faq">
+    <section id="main">
       <h2>Avvisi</h2> 
       <p>
         <em>
@@ -97,8 +97,6 @@
         </p>
       </blockquote>
       -->
-
-      <section id="corsi">
 
       <h3>Primo anno</h3>
       <ul>
@@ -407,8 +405,7 @@
           </li>
         </ul>
       </ul>
-      
-      </section>
+
       <!--
       <h2>I am a robot</h2>
 
