Fix archi1 edizione b link

--- a/site/index.html
+++ b/site/index.html
@@ -122,7 +122,7 @@
             <a href="https://t.me/joinchat/ALnoP0bMb24aFnyID2xzqg">Architettura degli elaboratori I</a><br>
             <small class="linkAvailable"><a href="https://aborgheseae1.ariel.ctu.unimi.it/v5/home/Default.aspx"><i class="fas fa-home"></i> Ariel Ed.1</a></small> 
             - 
-            <small class="linkAvailable"><a href="https://mreae1.ariel.ctu.unimi.it/v5/home/Default.aspx"><i class="fas fa-home"></i> Ariel Ed.2</a></small> 
+            <small class="linkAvailable"><a href="https://nbasilicoae1.ariel.ctu.unimi.it/v5/home/Default.aspx"><i class="fas fa-home"></i> Ariel Ed.2</a></small> 
             <!--
             - 
             <small class="linkNotAvailable"><a><i class="fas fa-question-circle"></i> faq</a></small>
