--- a/site/index.html
+++ b/site/index.html
@@ -20,32 +20,41 @@
     <header>
       <h1><a href="https://github.com/NetworkStataleInformatica">Network <br>Statale Informatica</h1></a>
       <div><img src="logo.png" style="width:150px; height:150px; padding-left:50px;"><br><br></div>
-      <p>Benvenuti nel sito web del nostro network! Qui potete trovare ogni link ai gruppi e faq dei corsi della triennale di Informatica (Unimi), e altre informazioni utili.</p>
-      <p class="view">
-        <a href="https://t.me/faqStataleInformatica">Vai al canale delle faq
-          <small>faqStataleInformatica</small></a>
+      <p>
+        Benvenuti nel sito web del nostro network! Qui potete trovare ogni link ai gruppi e faq dei corsi della triennale di Informatica (Unimi), e altre informazioni utili.
       </p>
       <p class="view">
-        <a href="https://github.com/NetworkStataleInformatica/faq">Vai alla repository
-          <small>NetworkStataleInformatica/faq</small></a>
+        <a href="https://discord.gg/pPGUrr35sv">Unisciti al server discord <i class="fab fa-discord"></i>
+          <small>Dip Informatica</small>
+        </a>
       </p>
       <ul>
-        <li class="first-child"><a href="regolamento/regolamento.pdf">Link <strong>Regolamento <i class="fas fa-info-circle"></i></strong></a></li>
-        <li class="middle-child"><a href="https://drive.google.com/drive/folders/0BwzuyD3iLGcbcUNxTVNOVE9FR1E">Link <strong>Drive <i class="fab fa-google-drive"></i></strong></a></li>
-        <li class="last-child"><a href="https://t.me/stataleinformatica">Canale <strong>Network <i class="fab fa-telegram"></i></strong></a></li>
+        <li class="first-child"><a href="https://t.me/stataleinformatica">Canale <strong>Network <i class="fab fa-telegram"></i></strong></a></li>
+        <li class="middle-child"><a href="regolamento/regolamento.pdf">Link <strong>Regolamento <i class="fas fa-info-circle"></i></strong></a></li>
+        <li class="last-child"><a href="https://drive.google.com/drive/folders/0BwzuyD3iLGcbcUNxTVNOVE9FR1E">Link <strong>Drive <i class="fab fa-google-drive"></i></strong></a></li>
+        
       </ul>
       <p class="view">
-        <a href="https://t.me/joinchat/ALnoP0sisnneYcGOpUaRiA">Gruppo dei materiali</a>
+        <a href="https://github.com/NetworkStataleInformatica/faq">Repository del sito <i class="fab fa-github"></i></a>
         <br>
-        <a href="https://t.me/joinchat/ALnoP0haA-GjHjmlmbW-vg">Gruppo per le ripetizioni</a>
+        <a href="https://t.me/joinchat/ALnoP0sisnneYcGOpUaRiA">Gruppo dei materiali <i class="fab fa-telegram"></i></a>
         <br>
-        <a href="https://t.me/UniMiCazzeggio">Gruppo freetalk</a>
-        <br><br>
-        Accesso rapido servizi Unimi<br>
-        <a href="http://www.quickunimi.it/">Quick Unimi</a>
-      </p>
+        <a href="https://t.me/joinchat/ALnoP0haA-GjHjmlmbW-vg">Gruppo per le ripetizioni <i class="fab fa-telegram"></i></a>
+        <br>
+        <a href="https://t.me/UniMiCazzeggio">Gruppo freetalk <i class="fab fa-telegram"></i></a>
+        <br>
+        <p class="view">
+          <a href="http://www.quickunimi.it">Accesso rapido servizi Unimi
+            <small>Quick Unimi</small>
+          </a>
+        </p>
+        <p class="view">
+          <a href="https://orientamento.di.unimi.it/index.php/iniziative/tutor-di-processo">Domande frequenti delle matricole
+            <small>Faq generali</small>
+          </a>
+        </p>
       <p>
-        Il sito è gestito da alcuni dei rappresentanti del dipartimento di informatica e da altri studenti che stanno collaborando al progetto.
+        Il progetto è gestito da alcuni dei rappresentanti del dipartimento di informatica e da altri studenti che stanno collaborando al progetto.
       </p>
       <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small>
       </p>
@@ -57,7 +66,8 @@
       <p>
         <em>
           Abbiamo creato un supporto anche per i link ai siti web dei vari corsi. Se noti qualcosa che non corrisponde
-          o link che non reindirizzano al sito corretto, scrivi a <a href="https://t.me/giuseppetm">@giuseppetm</a> su telegram.
+          o link che non reindirizzano al sito corretto, scrivi a <a href="https://t.me/giuseppetm">@giuseppetm</a> su telegram
+          esponendo il problema.
         </em>
       </p>
 
@@ -65,28 +75,20 @@
       <p>
         <em>
           Pian piano stanno venendo create le varie faq dei corsi.<br>
-          Se vuoi aiutare nello sviluppo di esse, puoi entrare nel canale riguardante le faq (lo trovi nei link principali del sito) e proporre 
-          nuove domande con relativa risposta per il corso a cui vuoi contribuire.
+          Se vuoi aiutare nello sviluppo di esse, puoi entrare nel canale riguardante le faq al seguente <a href="https://t.me/faqStataleInformatica">link</a> 
+          e proporre nuove domande con relativa risposta per il corso a cui vuoi contribuire.
           <a href="https://github.com/NetworkStataleInformatica/faq/tree/master/faq_files">
             Qui
           </a> 
-          puoi accedere alla cartella dei file latex relativi alle FAQ.<br>
+          puoi accedere alla cartella dei file latex relativi alle FAQ. Altrimenti scrivi a <a href="https://t.me/giuseppetm">@giuseppetm</a> su telegram
+          per proporle direttamente.<br>
         </em>
       </p>
 
-      <h2>Faq generali</h2> 
+      <h2>Gruppi, siti web e faq dei corsi</h2>
       <p>
         <em>
-          È possibile trovare domande <b>generali</b> fatte più frequentemente al seguente
-          <a href="https://orientamento.di.unimi.it/index.php/iniziative/tutor-di-processo">link</a>.
-          Queste sono più per le matricole, ma più avanti creeremo delle FAQ anche in merito a borse di studio e altri argomenti.
-        </em>
-      </p>
-
-      <h2>Informazioni e link dei corsi</h2>
-      <p>
-        <em>
-          Di seguito trovate i link ai siti web e alle faq di ogni corso.
+          Di seguito trovate i link ai gruppi, siti web e faq di ogni corso.
         </em>
       </p>
 
