Aggiunte faq di archi1 e archi2

--- a/site/index.html
+++ b/site/index.html
@@ -122,13 +122,13 @@
           </li>
           <li>
             <a href="https://t.me/joinchat/ALnoP0bMb24aFnyID2xzqg">Architettura degli elaboratori I</a><br>
+            <small class="linkAvailable"><a href="http://ais-lab.di.unimi.it/Teaching/Architettura_I/_Arch_I.html"><i class="far fa-file-alt"></i> Avvisi</a></small> 
+            - 
             <small class="linkAvailable"><a href="https://aborgheseae1.ariel.ctu.unimi.it/v5/home/Default.aspx"><i class="fas fa-home"></i> Ariel Ed.1</a></small> 
             - 
             <small class="linkAvailable"><a href="https://nbasilicoae1.ariel.ctu.unimi.it/v5/home/Default.aspx"><i class="fas fa-home"></i> Ariel Ed.2</a></small> 
-            <!--
             - 
-            <small class="linkNotAvailable"><a><i class="fas fa-question-circle"></i> faq</a></small>
-            -->
+            <small class="linkAvailable"><a href="faq_files/architettura_degli_elaboratori_1/architettura_degli_elaboratori_1.pdf"><i class="fas fa-question-circle"></i> faq</a></small>
           </li>
         </ul>
         
@@ -157,10 +157,8 @@
           <li>
             <a href="https://t.me/joinchat/ALnoP08pDVwN2hP_tjLrRw">Architettura degli elaboratori II</a><br>
             <small class="linkAvailable"><a href="https://aborgheseae2.ariel.ctu.unimi.it/v5/home/Default.aspx"><i class="fas fa-home"></i> Sito Web</a></small> 
-            <!--
             - 
-            <small class="linkNotAvailable"><a><i class="fas fa-question-circle"></i> faq</a></small>
-            -->
+            <small class="linkAvailable"><a href="faq_files/architettura_degli_elaboratori_2/architettura_degli_elaboratori_2.pdf"><i class="fas fa-question-circle"></i> faq</a></small>
           </li>
         </ul>
       </ul>
