--- a/site/index.html
+++ b/site/index.html
@@ -274,10 +274,8 @@
           <li>
             <a href="https://t.me/joinchat/I5_YNlO1bxtsR7jkMc9UzA">Elaborazione delle immagini</a><br>
             <small class="linkAvailable"><a href="https://rlanzarottiei1.ariel.ctu.unimi.it/v5/home/Default.aspx"><i class="fas fa-home"></i> Sito Web</a></small> 
-            <!--
             -
-            <small class="linkNotAvailable"><a><i class="fas fa-question-circle"></i> faq</a></small>
-            -->
+            <small class="linkAvailable"><a href="faq_files/elaborazione_delle_immagini/elaborazione_delle_immagini.pdf"><i class="fas fa-question-circle"></i> faq</a></small>
           </li>
           <li>
             <a href="https://t.me/joinchat/I5_YNlDpOpCPpoLGAH0obA">Fisica</a><br>
@@ -290,10 +288,8 @@
           <li>
             <a href="https://t.me/joinchat/BnHOHxvl1j6aAdKSf9L1MA">Intelligenza artificiale I</a><br>
             <small class="linkAvailable"><a href="https://nbasilicoia.ariel.ctu.unimi.it/v5/Home/default.aspx"><i class="fas fa-home"></i> Sito Web</a></small> 
-            <!--
             -
-            <small class="linkNotAvailable"><a><i class="fas fa-question-circle"></i> faq</a></small>
-            -->
+            <small class="linkAvailable"><a href="faq_files/intelligenza_artificiale_1/intelligenza_artificiale_1.pdf"><i class="fas fa-question-circle"></i> faq</a></small>
           </li>
           <li>
             <a href="https://t.me/joinchat/I5_YNhjX2Al4ecpYTP4v4w">Interazioni sociali in rete</a><br>
