--- a/site/index.html
+++ b/site/index.html
@@ -54,7 +54,7 @@
           </a>
         </p>
       <p>
-        Il progetto è gestito da alcuni dei rappresentanti del dipartimento di informatica e da altri studenti che stanno collaborando al progetto.
+        Il progetto è gestito da studenti e da alcuni dei rappresentanti del dipartimento di informatica.
       </p>
       <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small>
       </p>
