Aggiunte faq di fisica

--- a/site/index.html
+++ b/site/index.html
@@ -280,10 +280,8 @@
           <li>
             <a href="https://t.me/joinchat/I5_YNlDpOpCPpoLGAH0obA">Fisica</a><br>
             <small class="linkAvailable"><a href="https://app.slack.com/client/TDFBLAMTJ/CDFBLAV6C"><i class="fas fa-home"></i> Sito Web</a></small> 
-            <!--
             -
-            <small class="linkNotAvailable"><a><i class="fas fa-question-circle"></i> faq</a></small>
-            -->
+            <small class="linkAvailable"><a href="faq_files/fisica/fisica.pdf"><i class="fas fa-question-circle"></i> faq</a></small>
           </li>
           <li>
             <a href="https://t.me/joinchat/BnHOHxvl1j6aAdKSf9L1MA">Intelligenza artificiale I</a><br>
