--- a/site/index.html
+++ b/site/index.html
@@ -144,7 +144,7 @@
             <a href="https://t.me/joinchat/ALnoP0cgIJQYZJI47-Rorg">Logica matematica</a><br>
             <small class="linkAvailable"><a href="https://saguzzolilom.ariel.ctu.unimi.it/v5/home/Default.aspx"><i class="fas fa-home"></i> Sito Web</a></small> 
             - 
-            <small class="linkAvailable"><a href="https://homes.di.unimi.it/aguzzoli/logicatriennale.html"><i class="fas fa-home"></i> Materiale</a></small> 
+            <small class="linkAvailable"><a href="https://homes.di.unimi.it/aguzzoli/logicatriennale.html"><i class="far fa-file-alt"></i> Materiale</a></small> 
             -             
             <small class="linkAvailable"><a href="faq_files/logica_matematica/logica_matematica.pdf"><i class="fas fa-question-circle"></i> faq</a></small>
           </li>
