--- a/website/public/index.html
+++ b/website/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Network Statale Informatica" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Sito web del Network contenente tutte le informazioni riguardo i corsi di laurea di Informatica."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
