--- a/website/public/index.html
+++ b/website/public/index.html
@@ -17,7 +17,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="vendor/font-awesome/css/all.css" />
+    <link
+      rel="stylesheet"
+      href="%PUBLIC_URL%/vendor/font-awesome/css/all.css"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -32,7 +35,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <!-- E' qui che vanno a finire il componente! -->
     <div id="root"></div>
 
     <!--
