Test og properties

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -3,28 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="author" content="Network Statale Informatica" />
-    <meta
-      name="description"
-      content="Sito web del Network contenente tutte le informazioni riguardo i corsi di laurea di Informatica."
-    />
-    <link
-      rel="stylesheet"
-      href="%PUBLIC_URL%/vendor/font-awesome/css/all.css"
-    />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="author" content="Giuseppe Del Campo" />
+    <meta name="description" content="Sito web del network contenente i collegamenti a siti web, gruppi telegram e faq dei corsi didattici delle lauree triennali e magistrali (Unimi) in ambito informatico." />
+    <meta name="keywords" content="Network statale informatica, Gruppi telegram unimi informatica, Siti web corsi unimi informatica, Faq corsi unimi informatica" />
+    <!--<meta property="og:title" content=""/>-->
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://networkstataleinformatica.github.io/network/" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
+    <meta property="og:description" content="Sito web del network contenente i collegamenti a siti web, gruppi telegram e faq dei corsi didattici delle lauree triennali e magistrali (Unimi) in ambito informatico." />
+    <meta property="og:site_name" content="Network Statale Informatica" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/font-awesome/css/all.css" /> 
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Network Statale Informatica</title>
   </head>
   <body>
@@ -35,7 +25,7 @@
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"></script> 
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
       integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
