--- a/website/public/index.html
+++ b/website/public/index.html
@@ -7,12 +7,15 @@
     <meta name="author" content="Giuseppe Del Campo" />
     <meta name="description" content="Sito web del network contenente i collegamenti a siti web, gruppi telegram e faq dei corsi didattici delle lauree triennali e magistrali (Unimi) in ambito informatico." />
     <meta name="keywords" content="Network statale informatica, Gruppi telegram unimi informatica, Siti web corsi unimi informatica, Faq corsi unimi informatica" />
-    <!--<meta property="og:title" content=""/>-->
-    <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://networkstataleinformatica.github.io/network/" />
-    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
+
+    <!-- Open Graph Data -->
+    <meta property="og:title" content="Network Statale Informatica"/>
     <meta property="og:description" content="Sito web del network contenente i collegamenti a siti web, gruppi telegram e faq dei corsi didattici delle lauree triennali e magistrali (Unimi) in ambito informatico." />
-    <meta property="og:site_name" content="Network Statale Informatica" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://networkstataleinformatica.github.io/network/" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo_1280x720_whitescreen.png" />
+    <meta name="twitter:card" content="summary_large_image">
+
     <link rel="stylesheet" href="%PUBLIC_URL%/vendor/font-awesome/css/all.css" /> 
 
     <title>Network Statale Informatica</title>
