--- a/website/public/index.html
+++ b/website/public/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- %PUBLIC_URL% -->
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="icon" href="logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="author" content="Giuseppe Del Campo" />
     <meta name="description" content="Sito web del network contenente i collegamenti a siti web, gruppi telegram e faq dei corsi didattici delle lauree triennali e magistrali (Unimi) in ambito informatico." />
@@ -16,9 +17,9 @@
     <meta property="og:image" content="%PUBLIC_URL%/logo_1280x720_whitescreen.png" />
     <meta name="twitter:card" content="summary_large_image">
 
-    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/font-awesome/css/all.css" /> 
+    <link rel="stylesheet" href="vendor/font-awesome/css/all.css" /> 
 
-    <title>Network Statale Informatica</title>
+    <title>Studenti UniMi</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
