--- a/website/public/index.html
+++ b/website/public/index.html
@@ -14,7 +14,7 @@
     <meta property="og:description" content="Sito web del network contenente i collegamenti a siti web, gruppi telegram e faq dei corsi didattici delle lauree triennali e magistrali (Unimi) in ambito informatico." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://networkstataleinformatica.github.io/network/" />
-    <meta property="og:image" content="%PUBLIC_URL%/logo_1280x720_whitescreen.png" />
+    <meta property="og:image" content="logo_1280x720_whitescreen.png" />
     <meta name="twitter:card" content="summary_large_image">
 
     <link rel="stylesheet" href="vendor/font-awesome/css/all.css" /> 
