--- a/website/public/index.html
+++ b/website/public/index.html
@@ -9,16 +9,16 @@
     <meta name="keywords" content="Network statale informatica, Gruppi telegram unimi informatica, Siti web corsi unimi informatica, Faq corsi unimi informatica" />
 
     <!-- Open Graph Data -->
-    <meta property="og:title" content="Studenti UniMi"/>
-    <meta property="og:description" content="Sito web contenente i collegamenti a siti web, gruppi telegram e faq dei corsi didattici delle lauree triennali e magistrali (Unimi) in ambito informatico." />
+    <meta property="og:title" content="Network Statale Informatica"/>
+    <meta property="og:description" content="Sito web del network contenente i collegamenti a siti web, gruppi telegram e faq dei corsi didattici delle lauree triennali e magistrali (Unimi) in ambito informatico." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://studentiunimi.it/" />
+    <meta property="og:url" content="https://networkstataleinformatica.github.io/network/" />
     <meta property="og:image" content="%PUBLIC_URL%/logo_1280x720_whitescreen.png" />
     <meta name="twitter:card" content="summary_large_image">
 
     <link rel="stylesheet" href="%PUBLIC_URL%/vendor/font-awesome/css/all.css" /> 
 
-    <title>Studenti UniMi</title>
+    <title>Network Statale Informatica</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
