--- a/website/public/index.html
+++ b/website/public/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Giuseppe Del Campo" />
     <meta name="description" content="Sito web del network contenente i collegamenti a siti web, gruppi telegram e faq dei corsi didattici delle lauree triennali e magistrali (Unimi) in ambito informatico." />
     <meta name="keywords" content="Network statale informatica, Gruppi telegram unimi informatica, Siti web corsi unimi informatica, Faq corsi unimi informatica" />
-
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://studentiunimi.it">
     <!-- Open Graph Data -->
     <meta property="og:title" content="Network Statale Informatica"/>
     <meta property="og:description" content="Sito web del network contenente i collegamenti a siti web, gruppi telegram e faq dei corsi didattici delle lauree triennali e magistrali (Unimi) in ambito informatico." />
