--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo_studenti_unimi_150x143.png" />
@@ -7,7 +7,7 @@
     <meta name="author" content="Giuseppe Del Campo, Manuele Lucchi" />
     <meta name="description" content="Sito web del network Studenti UniMi, contenente i collegamenti a siti web, gruppi telegram e faq dei corsi didattici delle lauree triennali e magistrali (Unimi) in ambito informatico." />
     <meta name="keywords" content="Studenti UniMi, Network statale informatica, Gruppi telegram unimi informatica, Siti web corsi unimi informatica, Faq corsi unimi informatica" />
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://studentiunimi.it https://code.jquery.com https://cdn.jsdelivr.net">
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://studentiunimi.it https://code.jquery.com https://cdn.jsdelivr.net; font-src 'self' spoprod-a.akamaihd.net;">
 
     <!-- Open Graph Data -->
     <meta property="og:title" content="Studenti UniMi"/>
@@ -26,17 +26,8 @@
 
     <div id="root"></div>
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"></script> 
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-      crossorigin="anonymous"></script>
+    <script src="%PUBLIC_URL%/vendor/bootstrap/jquery-3.5.1.slim.min.js"></script>
+    <script src="%PUBLIC_URL%/vendor/bootstrap/popper.min.js"></script>
+    <script src="%PUBLIC_URL%/vendor/bootstrap/bootstrap.min.js"></script>
   </body>
 </html>
