--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Giuseppe Del Campo, Manuele Lucchi" />
     <meta name="description" content="Sito web del network Studenti UniMi, contenente i collegamenti a siti web, gruppi telegram e faq dei corsi didattici delle lauree triennali e magistrali (Unimi) in ambito informatico." />
     <meta name="keywords" content="Studenti UniMi, Network statale informatica, Gruppi telegram unimi informatica, Siti web corsi unimi informatica, Faq corsi unimi informatica" />
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://studentiunimi.it https://code.jquery.com https://cdn.jsdelivr.net; font-src 'self' spoprod-a.akamaihd.net;">
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://studentiunimi.it https://code.jquery.com https://cdn.jsdelivr.net; font-src *;">
 
     <!-- Open Graph Data -->
     <meta property="og:title" content="Studenti UniMi"/>
@@ -26,7 +26,7 @@
 
     <div id="root"></div>
 
-    <script src="%PUBLIC_URL%/vendor/bootstrap/jquery-3.5.1.slim.min.js"></script>
+    <script src="%PUBLIC_URL%/vendor/bootstrap/jquery-3.5.1.min.js"></script>
     <script src="%PUBLIC_URL%/vendor/bootstrap/popper.min.js"></script>
     <script src="%PUBLIC_URL%/vendor/bootstrap/bootstrap.min.js"></script>
   </body>
