--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo_studenti_unimi_150x143.png" />
+    <link rel="icon" href="%PUBLIC_URL%/unimi150.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="author" content="Giuseppe Del Campo, Manuele Lucchi" />
     <meta name="description" content="Sito web del network Studenti UniMi, contenente i collegamenti a siti web, gruppi telegram e faq dei corsi didattici delle lauree triennali e magistrali (Unimi) in ambito informatico." />
@@ -14,7 +14,7 @@
     <meta property="og:description" content="Sito web contenente i collegamenti a siti web, gruppi telegram e faq dei corsi didattici delle lauree triennali e magistrali dell'università degli studi di Milano." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://studentiunimi.it" />
-    <meta property="og:image" content="%PUBLIC_URL%/logo_studenti_unimi_1280x720_whitescreen.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo1280x720.png" />
     <meta name="twitter:card" content="summary_large_image">
 
     <link rel="stylesheet" href="%PUBLIC_URL%/vendor/font-awesome/css/all.css" /> 
