--- a/public/index.html
+++ b/public/index.html
@@ -29,5 +29,6 @@
     <script src="%PUBLIC_URL%/vendor/bootstrap/jquery-3.5.1.min.js"></script>
     <script src="%PUBLIC_URL%/vendor/bootstrap/popper.min.js"></script>
     <script src="%PUBLIC_URL%/vendor/bootstrap/bootstrap.min.js"></script>
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "a01aada8d53f44709781f2d04dc04e4b"}'></script><!-- End Cloudflare Web Analytics -->
   </body>
 </html>
