--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Giuseppe Del Campo, Manuele Lucchi" />
     <meta name="description" content="Sito web del network Studenti UniMi, contenente i collegamenti a siti web, gruppi telegram e wiki dei corsi didattici delle lauree triennali e magistrali dell'università degli studi di Milano.-" />
     <meta name="keywords" content="Studenti UniMi, Network statale informatica, Gruppi telegram unimi informatica, Siti web corsi unimi informatica, Faq corsi unimi informatica" />
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://studentiunimi.it https://code.jquery.com https://cdn.jsdelivr.net; font-src *;">
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://studentiunimi.it https://code.jquery.com https://cdn.jsdelivr.net https://static.cloudflareinsights.com; font-src *;">
 
     <!-- Open Graph Data -->
     <meta property="og:title" content="Studenti UniMi"/>
