--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/logo/unimi150.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="author" content="Giuseppe Del Campo, Manuele Lucchi" />
-    <meta name="description" content="Sito web del network Studenti UniMi, contenente i collegamenti a siti web, gruppi telegram e wiki dei corsi didattici delle lauree triennali e magistrali dell'università degli studi di Milano.-" />
-    <meta name="keywords" content="Studenti UniMi, Network statale informatica, Gruppi telegram unimi informatica, Siti web corsi unimi informatica, Faq corsi unimi informatica" />
+    <meta name="description" content="Sito web del Network Studenti UniMi, contenente i collegamenti a siti web, gruppi telegram e wiki dei corsi didattici delle lauree triennali e magistrali dell'Università degli Studi di Milano.-" />
+    <meta name="keywords" content="Studenti UniMi, Studenti Unimi, Network statale informatica, Gruppi telegram unimi informatica, Siti web corsi unimi informatica, Faq corsi unimi informatica, Wiki Unimi, Network Studenti Unimi" />
     <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://studentiunimi.it https://code.jquery.com https://cdn.jsdelivr.net https://static.cloudflareinsights.com; font-src *;">
 
     <!-- Open Graph Data -->
     <meta property="og:title" content="Studenti UniMi"/>
-    <meta property="og:description" content="Sito web contenente i collegamenti a siti web, gruppi telegram e wiki dei corsi didattici delle lauree triennali e magistrali dell'università degli studi di Milano." />
+    <meta property="og:description" content="Sito web del Network Studenti UniMi, contenente i collegamenti a siti web, gruppi telegram e wiki dei corsi didattici delle lauree triennali e magistrali dell'Università degli Studi di Milano." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://studentiunimi.it" />
     <meta property="og:image" content="%PUBLIC_URL%/logo/logo1280x720.png" />
