--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="author" content="Giuseppe Del Campo, Manuele Lucchi" />
     <meta name="description" content="Sito web ufficiale del Network StudentiUniMi: gruppi WhatsApp rimpiazziati da Telegram, servizi e molto altro. Il network più grande dell'Università degli Studi di Milano." />
-    <meta name="keywords" content="Network StudentiUniMi, Studenti UniMi, Studenti Unimi, Network statale informatica, Gruppi telegram unimi informatica, Siti web corsi unimi informatica, Faq corsi unimi informatica, Wiki Unimi, Network Studenti Unimi" />
+    <meta name="keywords" content="Network StudentiUniMi, Studenti UniMi, Studenti Unimi, StudentiUniMi, Network statale informatica, Gruppi telegram unimi, Gruppi unimi, Siti web corsi unimi, Faq corsi unimi, Wiki Unimi, Network Studenti Unimi" />
     <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://studentiunimi.it https://code.jquery.com https://cdn.jsdelivr.net https://static.cloudflareinsights.com; font-src *;">
 
     <!-- Open Graph Data -->
