--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="it">
+<!--<!DOCTYPE html>-->
+<html>
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo/unimi150.png" />
