--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="author" content="Giuseppe Del Campo, Manuele Lucchi" />
     <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://studentiunimi.it https://code.jquery.com https://cdn.jsdelivr.net https://static.cloudflareinsights.com; font-src *;">
-    <meta property="og:image" content="%PUBLIC_URL%/logo/preview_logo.png" />
-
-    <!--
-    <title>Network StudentiUniMi</title>
+    
+    <title>Network StudentiUniMi - Gruppi, servizi e molto altro</title>
     <meta name="description" content="Sito web ufficiale del Network StudentiUniMi: gruppi WhatsApp rimpiazziati da Telegram, servizi e molto altro. Il network più grande dell'Università degli Studi di Milano." />
     <meta name="keywords" content="Network StudentiUniMi, Studenti UniMi, Studenti Unimi, StudentiUniMi, Network statale informatica, Gruppi telegram unimi, Gruppi unimi, Siti web corsi unimi, Faq corsi unimi, Wiki Unimi, Network Studenti Unimi" />
-    -->
+    <link rel="canonical" hrefLang="it" href="https://studentiunimi.it/" />
 
-    <!-- Open Graph Data -->
-    <!--
-    <meta property="og:title" content="Network StudentiUniMi" />
+    <!-- Open Graph Properties -->
+    <meta property="og:title" content="Network StudentiUniMi - Gruppi, servizi e molto altro" />
     <meta property="og:description" content="Sito web ufficiale del Network StudentiUniMi: gruppi WhatsApp rimpiazziati da Telegram, servizi e molto altro. Il network più grande dell'Università degli Studi di Milano." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://studentiunimi.it" />
     <meta property="og:image" content="%PUBLIC_URL%/logo/preview_logo.png" />
-    -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://studentiunimi.it/" />
 
   </head>
   <body>
