--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
-<html lang="it">
+<html>
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo/unimi150.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="author" content="Giuseppe Del Campo, Manuele Lucchi" />
-    <meta name="description" content="Sito web ufficiale del Network StudentiUniMi: gruppi WhatsApp rimpiazziati da Telegram, servizi e molto altro. Il network più grande dell'Università degli Studi di Milano." />
-    <meta name="keywords" content="Network StudentiUniMi, Studenti UniMi, Studenti Unimi, Network statale informatica, Gruppi telegram unimi informatica, Siti web corsi unimi informatica, Faq corsi unimi informatica, Wiki Unimi, Network Studenti Unimi" />
     <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://studentiunimi.it https://code.jquery.com https://cdn.jsdelivr.net https://static.cloudflareinsights.com; font-src *;">
-
-    <!-- Open Graph Data -->
-    <meta property="og:title" content="Network StudentiUniMi"/>
-    <meta property="og:description" content="Sito web del Network StudentiUniMi, contenente i collegamenti a siti web, gruppi telegram e wiki dei corsi didattici delle lauree triennali e magistrali dell'Università degli Studi di Milano." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://studentiunimi.it" />
-    <meta property="og:image" content="%PUBLIC_URL%/logo/logo1280x720.png" />
-    <meta name="twitter:card" content="summary_large_image">
     
-    <title>Network StudentiUniMi</title>
+    <title>Network StudentiUniMi - Gruppi, servizi e molto altro</title>
+    <meta name="description" content="Sito web ufficiale del Network StudentiUniMi: gruppi WhatsApp rimpiazziati da Telegram, servizi e molto altro. Il network più grande dell'Università degli Studi di Milano." />
+    <meta name="keywords" content="Network StudentiUniMi, Studenti UniMi, Studenti Unimi, StudentiUniMi, Network statale informatica, Gruppi telegram unimi, Gruppi unimi, Siti web corsi unimi, Faq corsi unimi, Wiki Unimi, Network Studenti Unimi" />
+    <link rel="canonical" hrefLang="it" href="https://studentiunimi.it/" />
+
+    <!-- Open Graph Properties -->
+    <meta property="og:title" content="Network StudentiUniMi - Gruppi, servizi e molto altro" />
+    <meta property="og:description" content="Sito web ufficiale del Network StudentiUniMi: gruppi WhatsApp rimpiazziati da Telegram, servizi e molto altro. Il network più grande dell'Università degli Studi di Milano." />
+    <meta property="og:image" content="%PUBLIC_URL%/logo/preview_logo.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://studentiunimi.it/" />
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div id="root"></div>
 
-    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "a01aada8d53f44709781f2d04dc04e4b"}'></script><!-- End Cloudflare Web Analytics -->
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "a01aada8d53f44709781f2d04dc04e4b"}'></script>
+    <!-- End Cloudflare Web Analytics -->
   </body>
 </html>
